2014-10-12  David B. Lamkins  <david@lamkins.net>

	* edit.h (): When saving a buffer under a different name, existing
	buffers with that name adopt the new content.

	* edit.c (set_status_line, update_name_and_status)
	(edit_save_object_cb, edit_save_file_as, edit_object, edit_file):
	When saving a buffer under a different name, existing buffers with
	that name adopt the new content.

	* apl.c (aplwrap_quit): For now, disable the dirty-buffer check on
	exit.

	* edit.c (update_name, edit_object, edit_file): Update edit
	windows with new content upon renaming another edit window to a
	matching name or path.

	* menu.c (names_cb): Fix failed assertion upon closing empty Open
	Object window.

	* edit.h (): Synchronize cloned	editor windows.

	* edit.c (update_status, update_name, edit_mark_set_event)
	(edit_close, edit_save_object_cb, edit_save_file)
	(edit_save_file_as, edit_revert_function_cb)
	(edit_revert_variable_cb, edit_revert, build_edit_menubar)
	(edit_key_press_event, edit_object, edit_file): Synchronize cloned
	editor windows. Assign Ctrl-L keyboard accelerator to Clone. Fix
	some memory leaks.

	* edit.c (edit_save_object_cb): Back out window title sync.
	Cloning needs rework.

2014-10-11  David B. Lamkins  <david@lamkins.net>

	* edit.c (edit_save_object_cb): Update editor window title upon
	saving function.

	* apl.c (aplwrap_quit): Implement Revert for edit window.

	* edit.h (): Implement Revert for edit window.

	* edit.c (message_dialog, edit_save_object_cb)
	(build_edit_menubar, edit_file, clear_buffer, edit_revert)
	(edit_revert_function_cb, edit_revert_variable_cb): Implement
	Revert for edit window.

2014-10-10  David B. Lamkins  <david@lamkins.net>

	* aplwrap.c, edit.c, edit.h, search.c, search.h: Enable search
	only for versions of GTK+ (3.10 or later) which support
	GtkSearchBar.

	* search.h (): Implement search in edit windows.

	* edit.h (): Implement search in edit windows.

	* search.c (new_search_context, do_search)